# holdmypics

./: .browserslistrc  .coveragerc  .dockerignore  .eslintignore  .eslintrc.json  .eslintrc.yml  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .slugignore  .stylelintrc.json  Dockerfile  Makefile  Procfile  README.md  TODO.md  build.sh  config.py  cypress.json  docker-compose.debug.yml  docker-compose.yml  dum.sublime-project  gunicorn.conf.py  gunicorn_config.py  heroku.yml  jsconfig.json  package.json  postcss.config.js  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  run_server.py  tailwind.config.js  tsconfig.base.json  tsconfig.json  webpack.config.ts  (+1 more)
.circleci/: config.yml
.github/workflows/: tests.yml
config/: Dockerfile.jinja  Dockerfile.template  docker-compose.debug.yml  docker-compose.yml  process.yml  safelist.txt  tsconfig.base.json
config/dev/: Dockerfile
config/prod/: Dockerfile
cypress/integration/: index.spec.ts
cypress/plugins/: index.js
dummy_flask/: __init__.py  cli.py  constants.py  converters.py  core.py  hashed_file.py  main.py  package.py  tpl.py  utils.py
dummy_flask/api/: __init__.py  files.py  image_args.py  routes.py  utils.py
dummy_flask/core/: __init__.py  routes.py
dummy_flask/core/templates/: base.jinja
dummy_flask/routers/: api.py
dummy_flask/routers/api/: __init__.py  files.py  image_args.py  utils.py
dummy_flask/static/: main.js  styles.css
dummy_flask/templates/: base.jinja  css.html  grid.html  index.html  js.html
e2e/: package.json
e2e/cypress/: .eslintrc.yml  tsconfig.json
e2e/cypress/integration/: index.spec.ts
e2e/cypress/plugins/: index.js
e2e/cypress/support/: commands.js  index.d.ts
holdmypics/: __init__.py  _types.py  cli.py  cli_utils.py  constants.py  converters.py  exceptions.py  fonts.py  generate.py  hashed_file.py  html.py  log_config.py  logging.py  package.py  server.py  template.py  utils.py  wrapped_redis.py
holdmypics/api/: __init__.py  anim.py  args.py  base.py  files.py  image_args.py  img.py  routes.py  text.py  tiled.py  utils.py  words.py
holdmypics/core/: __init__.py  forms.py  routes.py
holdmypics/core/templates/: base.jinja  grid.jinja  helpers.jinja  index.jinja  tiled.jinja
holdmypics/templates/: grid.html  index.html
holdmypics/web/: __init__.py  forms.py  routes.py
holdmypics/web/templates/: base.jinja  helpers.jinja  index.jinja  tiled.jinja
plugin/: holdmyplugin.py
src/: css.html  grid.html  grid.scss  index.d.ts  index.ejs  jsconfig.json  main.js  main.ts  styles.scss  template.html  tsconfig.json  webpack-records-dev.json  webpack-records-prod.json  webpack-records.json
src/css/: main.css
src/css/base/: base.css
src/css/components/: buttons.css
src/css/layout/: content.css  footer.css  forms.css
src/css/pages/: index-page.css
src/css/theme/: fonts.css  theme.css
src/scss/: _vendor.scss  main.scss
src/scss/abstracts/: _functions.scss  _mixins.scss  _variables.scss
src/scss/base/: _base.scss  _root.scss  _utils.scss
src/scss/components/: _buttons.scss  _flex.scss  _tooltips.scss
src/scss/layout/: _content.scss  _footer.scss  _forms.scss
src/scss/pages/: _index.scss
src/scss/theme/: _fonts.scss  _theme.scss  _typography.scss
src/ts/: .eslintrc.js  icons.ts  idle.ts  index.d.ts  log.ts  main.ts  random-text.ts  tsconfig.json  types.d.ts  utils.ts
src/ts/components/: form.ts  img.ts
src/ts/dom/: idle.ts
src/ts/helpers/: assert-is-tag.ts  bools.ts  debounce.ts  elem-is-tag.ts  forms.ts  random-text.ts
src/ts/pages/: index_page.ts  tiled_page.ts
tests/: conftest.py  holdmyplugin.py  strategies.py  test_dummy_flask.py  test_holdmypics.py  test_text.py  test_tiled.py  utils.py
